--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "@signpdf/signpdf": "^3.2.4",
     "crypto": "^1.0.1",
+    "node-forge": "^1.3.1",
     "node-signpdf": "^3.0.0",
     "pdf-lib": "^1.17.1",
     "pdfjs": "^2.5.3",
-    "pdfjs-dist": "^4.3.136"
+    "pdfjs-dist": "^4.3.136",
+    "pkcs11js": "^2.1.4"
   },
   "name": "pdf",
   "version": "1.0.0",
