--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "multer": "^1.4.5-lts.1",
     "node-forge": "^1.3.1",
     "node-signpdf": "^3.0.0",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "ws": "^8.18.0"
   }
 }
