--- a/signingpdf/backend/package.json
+++ b/signingpdf/backend/package.json
@@ -17,6 +17,7 @@
     "hummus": "^1.0.117",
     "multer": "^1.4.5-lts.1",
     "node-forge": "^1.3.1",
-    "node-signpdf": "^3.0.0"
+    "node-signpdf": "^3.0.0",
+    "pdf-lib": "^1.17.1"
   }
 }
